updated docs, added link to todo sheet

--- a/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
+++ b/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
@@ -620,8 +620,7 @@
     "        self.referred_clients += 1\n",
     "    \n",
     "    def stay(self, client):\n",
-    "        \"\"\"The staying processes. It takes a ``client`` processes and tries\n",
-    "        to clean it.\"\"\"\n",
+    "        \"\"\"The staying processes. It takes a ``client`` and makes the client stay for a random duration at the shelter.\"\"\"\n",
     "        stay_duration = random.randint(7, 365)\n",
     "        yield self.env.timeout(stay_duration)\n",
     "        print(\"Shelter hosted the {} for {} days, now has {} beds free\".format(\n",
@@ -629,6 +628,8 @@
     "            stay_duration, \n",
     "            NUM_BEDS - self.shelter.count))\n",
     "        \n",
+    "     def stay(self, client, case):\n",
+    "        \"\"\"Duration of stay for client in the shelter based on her case (.\"\"\"\n",
     "        \n",
     "\n",
     "def client(env, name, sh):\n",
