--- a/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
+++ b/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
@@ -629,8 +629,24 @@
     "            NUM_BEDS - self.shelter.count))\n",
     "        \n",
     "     def stay(self, client, case):\n",
-    "        \"\"\"Duration of stay for client in the shelter based on her case (.\"\"\"\n",
+    "        \"\"\"Duration of stay for client in the shelter based on her case (CAPABLE=1, CULTURAL=2, MENTAL=3, SKILLS=4).\"\"\"\n",
+    "        match case:\n",
+    "        case 1: # Capable and quickly back on their feet\n",
+    "            stay_duration = random.randint(7, 2*30)\n",
+    "        case 2: #Language and cultural barrier\n",
+    "            stay_duration = random.randint(9*30, 12*30)\n",
+    "        case 3: #Mental barrier\n",
+    "            stay_duration = random.randint(4*30, 9*30) # TODO this is a long tailed distribution, not uniform. check README.md.\n",
+    "            #need to change\n",
+    "        case 4:\n",
+    "            stay_duration = random.randint(2*30, 6*30)\n",
     "        \n",
+    "        yield self.env.timeout(stay_duration)\n",
+    "        print(\"Shelter hosted the {}/case type {} for {} days, now has {} beds free\".format(\n",
+    "            client,\n",
+    "            case,\n",
+    "            stay_duration, \n",
+    "            NUM_BEDS - self.shelter.count))\n",
     "\n",
     "def client(env, name, sh):\n",
     "    \"\"\"The client process (each client has a ``name``) arrives at the shelter\n",
