labeled notebooks, added different poisson rates for before and after august

--- a/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
+++ b/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1f473849",
+   "metadata": {},
+   "source": [
+    "## Notebook #4 goal\n",
+    "\n",
+    "This notebook has the code for variable stay based on the client's situation (aka case). It is working code, but not integrated as of yet into the main model body\n",
+    "\n",
+    "For more details on the case, read the main README.md\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c7f13b4",
    "metadata": {},
    "source": [
@@ -24,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "8f18e36b",
    "metadata": {},
    "outputs": [
@@ -628,17 +640,16 @@
     "            stay_duration, \n",
     "            NUM_BEDS - self.shelter.count))\n",
     "        \n",
-    "     def stay(self, client, case):\n",
+    "    def stay2(self, client, case):\n",
     "        \"\"\"Duration of stay for client in the shelter based on her case (CAPABLE=1, CULTURAL=2, MENTAL=3, SKILLS=4).\"\"\"\n",
-    "        match case:\n",
-    "        case 1: # Capable and quickly back on their feet\n",
+    "        if case == 1 : # Capable and quickly back on their feet\n",
     "            stay_duration = random.randint(7, 2*30)\n",
-    "        case 2: #Language and cultural barrier\n",
+    "        elif case == 2: #Language and cultural barrier\n",
     "            stay_duration = random.randint(9*30, 12*30)\n",
-    "        case 3: #Mental barrier\n",
+    "        elif case == 3: #Mental barrier\n",
     "            stay_duration = random.randint(4*30, 9*30) # TODO this is a long tailed distribution, not uniform. check README.md.\n",
     "            #need to change\n",
-    "        case 4:\n",
+    "        elif case == 4:\n",
     "            stay_duration = random.randint(2*30, 6*30)\n",
     "        \n",
     "        yield self.env.timeout(stay_duration)\n",
