--- a/notebooks/03-shelter_model_NHPP_arrivals.ipynb
+++ b/notebooks/03-shelter_model_NHPP_arrivals.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "86165f61",
+   "metadata": {},
+   "source": [
+    "## Notebook #3 goal\n",
+    "\n",
+    "This notebook has the code for NHPP arrivals (at the end). It is working code, but not integrated as of yet into the main model body\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c7f13b4",
    "metadata": {},
    "source": [
@@ -863,7 +873,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -877,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
