shelter beds keep getting reset every time new person arrives

--- a/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
+++ b/notebooks/04-simple-shelter-model-stay-duration-modeling.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "8f18e36b",
    "metadata": {},
    "outputs": [
@@ -674,10 +674,10 @@
     "        with sh.shelter.request() as request:\n",
     "            yield request\n",
     "\n",
-    "            print('%s enters the shelter on day %i.' % (name, env.now))\n",
+    "            print('[client] %s enters the shelter on day %i.' % (name, env.now))\n",
     "            yield env.process(sh.stay(name))\n",
     "\n",
-    "            print('%s leaves the shelter on day %i.' % (name, env.now))\n",
+    "            print('[client] %s leaves the shelter on day %i.' % (name, env.now))\n",
     "\n",
     "\n",
     "def setup(env, num_beds, staytime, t_inter):\n",
