updated with arrival_rate as integer

--- a/notebooks/03-shelter_model_NHPP_arrivals.ipynb
+++ b/notebooks/03-shelter_model_NHPP_arrivals.ipynb
@@ -781,7 +781,7 @@
     "            \n",
     "    for j in range(0,len(arrival_times)):\n",
     "        x = 3.5 + 2.5*math.sin(arrival_times[j]/2)\n",
-    "        arrival_rate.append(x)\n",
+    "        arrival_rate.append(round(x))\n",
     "    \n",
     "    #generate client type for each arrival \n",
     "    client_type = list(numpy.random.choice([1,2,3,4],len(arrival_times), p=[0.25,0.25,0.25,0.25]))\n",
@@ -865,7 +865,7 @@
     "# round off arrivals\n",
     "fig, ax = plt.subplots(figsize =(10, 7))\n",
     "# mirror the arrivals to make it skewed for smaller arrivals compared to larger ones (can be removed if needed)\n",
-    "ax.hist([7-round(i) for i in arrival_rate],bins=6)\n",
+    "ax.hist([7-i for i in arrival_rate],bins=6)\n",
     "plt.title('Histogram of arrivals')"
    ]
   }
